--- a/frontend/src/styles/dnd.css
+++ b/frontend/src/styles/dnd.css
@@ -6,34 +6,25 @@
   
   .DND aside {
     border-right: 1px solid #eee;
-    padding: 15px 10px;
-    font-size: 12px;
-    background: #fcfcfc;
-    width: 30vh;
+    padding: 25px 15px;
+    font-size: 14px;
+    background: white;
+    width: 40vh;
   }
   
   .DND aside > * {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     cursor: grab;
   }
   
   .DND aside .description {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
-  
+    
   .DND .flow {
     flex-grow: 1;
     height: 100%;
   }
   
-  @media screen and (min-width: 768px) {
-    .DND {
-      flex-direction: row;
-    }
-  
-    .DND aside {
-      width: 20%;
-      max-width: 180px;
-    }
-  }
-  
+
+ 
